logs/Slang/generated/hdlconv/hdlconvertor_p334.sv.log
name: hdlconvertor_p334
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p334.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p334.sv:1:1: error: language feature not yet supported
virtual class C#(parameter DECODE_W, parameter ENCODE_W = $clog2(DECODE_W));
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
